--- a/corprules.in
+++ b/corprules.in
@@ -175,6 +175,7 @@ AUTHOR_NAME!
 ####### Abstract #######
 #############################################################################
 
+
 WIDE_ABSTRACT {
 
 SCI_ABSTRACT
@@ -198,8 +199,8 @@ SCI_ABSTRACT {
  SCI_ABSTRACT_HEADER 
 
  SCI_INTRO_A SCI_INTRO_PARAGRAPH_GENERIC SCI_ABSTRACT_A SCI_INTRO_THESIS
-
 }
+
 
 SCI_ABSTRACT {
 
@@ -451,7 +452,7 @@ SCI_INTRO_A+1   Many TRACE_UNIT_LONGs ago, SCI_COUNTRY_MAYBE SCI_PEOPLE PARENTH 
 
 SCI_INTRO_A+1 LIT_ALTHOUGH SCI_GENERIC_NOUN SCI_MAY not SCI_PROVE_VERB SCI_THING_P in the SCI_MANNER initially expected, SCI_INTRO_THESIS
 
-SCI_AGE+5 TRACE_UNIT_LONG
+SCI_AGE+1 TRACE_UNIT_LONG
 SCI_AGE	17$^{th}$ Century
 SCI_AGE	18$^{th}$ Century
 SCI_AGE	19$^{th}$ Century
@@ -474,7 +475,7 @@ SCI_INTRO_A	SCI_THING_MOD and SCI_THING_MOD, while SCI_ADJ in theory, have not b
 SCI_INTRO_A	The SCI_ACT is a SCI_ADJ SCI_PROBLEM XXX
 SCI_INTRO_A	The SCI_ACT has been SCI_ADV SCI_VERBED SCI_BY_USING SCI_THING_MOD, and current trends suggest that the SCI_ACT will soon emerge XXX
 SCI_INTRO_A	SCI_COUNTRY_MAYBE SCI_PEOPLE SCI_AGREE that EXP_ADJ SCI_BUZZWORD_NOUN are an interesting new topic in the field of SCI_FIELD, and SCI_COUNTRY_MAYBE SCI_PEOPLE SCI_AGREE_END XXX
-SCI_INTRO_A	The AREAADJ approach to SCI_THING_MOD is defined not only by the SCI_ACT, but also by the SCI_ADJ need for SCI_THING_MOD XXX
+SCI_INTRO_A	The AREAADJ approach to SCI_THING_MOD is defined not only by the SCI_ACT, but also by the SCI_ADJ NEED for SCI_THING_MOD XXX
 SCI_INTRO_A	Recent advances in EXP_ADJ SCI_BUZZWORD_NOUN and EXP_ADJ SCI_BUZZWORD_NOUN SCI_INTRO_ACT SCI_THING_MOD XXX
 SCI_INTRO_A	SCI_ANUMBER SCI_COUNTRY_MAYBE SCI_PEOPLE would agree that, had it not been for SCI_THING, the SCI_ACT SCI_MAY never have occurred XXX
 SCI_INTRO_A	The implications of EXP_ADJ SCI_BUZZWORD_NOUN have been far-reaching and pervasive XXX
@@ -484,7 +485,7 @@ SCI_INTRO_ACT offer a viable alternative to
 SCI_INTRO_ACT have paved the way for
 SCI_INTRO_ACT SCI_VERB_PL in order to SCI_GOAL_ACHIEVE
 SCI_INTRO_ACT are LIT_OFTEN at odds with
-SCI_INTRO_ACT do not necessarily obviate the need for
+SCI_INTRO_ACT do not necessarily obviate the NEED for
 SCI_INTRO_ACT are based entirely on the assumption that SCI_THING_MOD and SCI_THING_MOD are not in conflict with
 
 MAYBEEG+3 
@@ -547,6 +548,7 @@ GENERAL the coolest
 GENERAL the most RECENT
 GENERAL the most LIT_GOOD
 GENERAL glamorous
+GENERAL contemporary
 
 OPINION opinion
 OPINION belief
@@ -571,7 +573,7 @@ SCI_INTRO_GENERIC_MID_3 SCI_INTRO_GENERIC_MID_2 XXX SCI_INTRO_GENERIC_MID
 SCI_INTRO_GENERIC_MID_4 SCI_INTRO_GENERIC_MID_3 XXX SCI_INTRO_GENERIC_MID 
 SCI_INTRO_GENERIC_MID LIT_LEADIN the SCI_DRAWBACK of this type of SCI_APPROACH, however, is that SCI_OVERALL_THESIS_PROVE 
 SCI_INTRO_GENERIC_MID LIT_LEADIN the basic tenant of this SCI_APPROACH is that SCI_THING_P SCI_VERB_PL 
-SCI_INTRO_GENERIC_MID LIT_LEADIN LIT_ALTHOUGH GENERAL OPINION states that this SCI_PROBLEM is LIT_OFTEN SCI_PROBLEM_SOLVED by the SCI_ACT, we believe that a different SCI_APPROACH is  REQUIRED
+SCI_INTRO_GENERIC_MID LIT_LEADIN LIT_ALTHOUGH GENERAL OPINION states that this SCI_PROBLEM is LIT_OFTEN SCI_PROBLEM_SOLVED by the SCI_ACT, we believe that a different SCI_APPROACH is REQUIRED 
 SCI_INTRO_GENERIC_MID LIT_LEADIN indeed, SCI_THING_P and SCI_BUZZWORD_ADJ SCI_BUZZWORD_NOUN have a long history of SCI_VERBING_PL in this SCI_MANNER 
 SCI_INTRO_GENERIC_MID LIT_LEADIN two properties make this SCI_APPROACH IDEAL:  SCI_SYSTEM_PROP, and also, SCI_SYSTEM_PROP 
 SCI_INTRO_GENERIC_MID LIT_LEADIN SCI_SYSTEM_PROP 
@@ -579,6 +581,10 @@ SCI_INTRO_GENERIC_MID LIT_LEADIN we view SCI_FIELD as following a cycle of four 
 CI_INTRO_GENERIC_MID LIT_LEADIN we METAVERB BIGTHEOREM, that SCI_FIELD follows three SCI_ADJ SCI_STAGEs: EXP_ADJ SCI_VERBION, SCI_SYS_VERBION and EXP_ADJ SCI_SYS_VERBION 
 SCI_INTRO_GENERIC_MID LIT_LEADIN for example, SCI_ANUMBER SCI_SYSTEM_PL SCI_SYS_VERB SCI_GENERIC_NOUN in order to SCI_GOAL_ACHIEVE ADJECTIVE CONSTRAINT_TYPE
 SCI_INTRO_GENERIC_MID LIT_REVERSAL, this SCI_APPROACH is LIT_OFTEN SCI_REACTION REACTBYWHO
+SCI_INTRO_GENERIC_MID LIT_LEADIN SCI_SYSTEM_PL boils down to two SCI_MAIN premises: that SCI_OVERALL_THESIS_PROVE, and that SCI_OVERALL_THESIS_PROVE
+SCI_INTRO_GENERIC_MID LIT_ALTHOUGH SCI_THING_P SCI_EFFECT (LAME_OBSERVATION), OBS_END
+SCI_INTRO_GENERIC_MID BTEXT
+SCI_INTRO_GENERIC_MID as BAD as it sounds, only LOWLY_PEOPLE would be so PERVERSE as to SCI_IMAGINE that SCI_OVERALL_THESIS_PROVE
 
 REACTBYWHO+3 in the field of SCI_FIELD
 REACTBYWHO by SCI_PEOPLE
@@ -1173,6 +1179,7 @@ IMPL_COMPONENT business machine monitor
 IMPL_COMPONENT operating method
 IMPL_COMPONENT SCI_THING
 IMPL_COMPONENT specific action item
+
 
 CODE_LINES	enterprises
 CODE_LINES	methodologies
@@ -2224,7 +2231,9 @@ TAKE_NOTE_THAT+10
 NEGLECTED		neglected
 NEGLECTED		failed
 
-EVAL_SEC_HYP_SET 	our overall EVALUATION seeks to prove three hypotheses: (1) EVAL_SEC_HYPOTHESIS; (2) EVAL_SEC_HYPOTHESIS; and finally (3) EVAL_SEC_HYPOTHESIS.
+EVAL_SEC_HYP_SET 	our overall EVALUATION seeks to SCI_PROVE_VERB two SCI_GUESSES: (1) EVAL_SEC_HYPOTHESIS, and  (2) EVAL_SEC_HYPOTHESIS.
+EVAL_SEC_HYP_SET 	our overall EVALUATION seeks to SCI_PROVE_VERB three SCI_GUESSES: (1) EVAL_SEC_HYPOTHESIS; (2) EVAL_SEC_HYPOTHESIS; and finally (3) EVAL_SEC_HYPOTHESIS.
+EVAL_SEC_HYP_SET 	our overall EVALUATION seeks to SCI_PROVE_VERB four SCI_GUESSES: (1) EVAL_SEC_HYPOTHESIS; (2) EVAL_SEC_HYPOTHESIS; (3) EVAL_SEC_HYPOTHESIS; and finally (4) EVAL_SEC_HYPOTHESIS.
 
 AFFECT		affect
 AFFECT		impact
@@ -2604,7 +2613,7 @@ EXP_ADJ+35		SCI_STATUS_ADJ
 EXP_ADJ+70		EXP_TREK
 
 EXP_ADJ+10		hyperspectral
-
+		
 
 EXP_TYPE	EXP_ADJ EXP_TYPE_UM
 EXP_TYPE	EXP_TYPE_UM
@@ -3168,10 +3177,10 @@ KERNEL_MODULE			KERNEL_MODULE_UM
 KERNEL_MODULE			SCI_MATH_ADJ KERNEL_MODULE_UM
 
 COMPILED		compiled
-COMPILED		hand hex-edtted
+COMPILED		hand hex-edited
 COMPILED		linked
 COMPILED		hand assembled
-COMPILED		painstakingly crafted
+COMPILED 		painstakingly crafted
 
 TOOLCHAIN		GCC VERSION
 TOOLCHAIN		EXP_WHOSE compiler
@@ -3292,7 +3301,7 @@ EVAL_ANALYZE_ONE our FINDINGs in EXP_FTG are currently in `sty' formation
 EVAL_ANALYZE_ONE+15 of course, all sensitive data was anonymised during our EMULATION
 EVAL_ANALYZE_ONE+15 TAKE_NOTE_THAT SCI_THING_P have SMOOTHER HARDWARE_PROP_OR_MEASUREMENT curves than do HACKED SCI_THING_P
 EVAL_ANALYZE_ONE+15 the key to EXP_FTG is SCI_VERBING the STORAGE_TYPE; EXP_FTG shows how SCI_OUR_SYSTEM's HARDWARE_PROP_OR_MEASUREMENT does not converge otherwise
-EVAL_ANALYZE_ONE+15 the data in EXP_FTG, in particular, proves that four TRACE_UNIT_LONGs of hard work were wasted on this project
+EVAL_ANALYZE_ONE+15 the data in EXP_FTG, in particular, proves that WNUM TRACE_UNIT_LONGs of hard work were wasted on this project
 
 ACCURATE	accurate
 ACCURATE	wildly inaccurate
@@ -3797,6 +3806,7 @@ SCI_THING_P	EXP_ADJ Lagrangians
 SCI_THING_P+6	EXP_ADJ systems
 SCI_THING_S+10 CHEM
 SCI_THING_S    spectrometer
+SCI_THING_S    PREFIXX-EMID2ometer
 
 SCI_THING_MOD+20	SCI_THING_P 
 SCI_THING_MOD+25 MNOUNS of SCI_THING_P  
@@ -3807,6 +3817,7 @@ SCI_THING_MOD	SCI_THING_MOD (LIT_REVERSAL_MAYBEat the \textit{PREFIX} scale)
 SCI_THING_MOD	SCI_THING_MOD (at the SCI_BUZZWORD_ADJ level)
 SCI_THING_MOD	SCI_THING_MOD (LIT_REVERSAL_MAYBEat the SCI_BUZZWORD_ADJ level)
 SCI_THING_MOD	SCI_THING_MOD (LIT_REVERSAL)
+
 
 CDADJ+15 
 CDADJ synthesised 
@@ -3839,9 +3850,9 @@ CDESYX characteristically
 
 CDESY+10 CDESYX
 CDESY+10 CDESYX speaking
-CDESY	in the laboratory
-CDESY	in the laboratory setting
-CDESY	in THE_WILD
+CDESY	 in the laboratory
+CDESY	 in the laboratory setting
+CDESY	 in THE_WILD
 
 CPRE+5
 CPRE CNUM
@@ -3941,6 +3952,7 @@ EMID+3   EMID1EMID2ELINT-EMID1EMID2ELINT-EMID1EMID2
 #EMID   EMID1EMID2ELINT-EMID1EMID2ELINT-EMID1EMID2ELINT-EMID1EMID2
 
 ESUF ase
+ESUF in
 ESUF aldehyde
 ESUF ate
 ESUF ose
@@ -4012,6 +4024,7 @@ CHEMX CHEMXU
 CHEMX the CDADJ CDES CHEMXU
 CHEMX CHEMXU (CDESY)
 
+
 SCI_SYSTEM	EXP_ADJ algorithm
 SCI_SYSTEM	EXP_ADJ system
 SCI_SYSTEM	EXP_ADJ framework
@@ -4020,6 +4033,7 @@ SCI_SYSTEM	EXP_ADJ application
 SCI_SYSTEM	EXP_ADJ METHODOLOGY
 SCI_SYSTEM	SCI_APPROACH
 SCI_SYSTEM	development in the field of SCI_FIELD
+SCI_SYSTEM	GENERAL development in the field of SCI_FIELD
 SCI_OUR_SYSTEM	our SCI_SYSTEM
 SCI_OUR_SYSTEM	SYSNAME
 SCI_SYSTEM_PL	EXP_ADJ algorithms
@@ -4030,6 +4044,7 @@ SCI_SYSTEM_PL	EXP_ADJ applications
 SCI_SYSTEM_PL	EXP_ADJ methodologies
 SCI_SYSTEM_PL	EXP_ADJ SCI_APPROACH_PL
 SCI_SYSTEM_PL	developments in the field of SCI_FIELD
+SCI_SYSTEM_PL	GENERAL developments in the field of SCI_FIELD
 
 METHODOLOGY	methodology
 METHODOLOGY	method
@@ -4040,6 +4055,8 @@ METHODOLOGY+6	EXP_WHERE_UM
 SCI_FIELD+1	SCI_BUZZWORD_ADJ SCI_FIELD
 SCI_FIELD+1	MATHADJ AREA
 SCI_FIELD+1	SOFTWARE_ADJ SCI_FIELD
+SCI_FIELD	PREFIXX-SCI_FIELD
+SCI_FIELD	PREFIXX-MATHADJ AREA
 SCI_FIELD	hardware and architecture
 SCI_FIELD	networking
 SCI_FIELD	operating systems
@@ -4407,7 +4424,6 @@ LIT_GREAT_ADV_NV+30	SCI_MAINly
 LIT_GREAT_ADV_NV	biblically
 LIT_GREAT_ADV_V		orgasmically
 
-
 LIT_OFTEN	often
 LIT_OFTEN	usually
 LIT_OFTEN	rarely
@@ -4500,6 +4516,7 @@ SCI_MANNER line of reasoning
 SCI_VIA+5 through
 SCI_VIA+5 via
 SCI_VIA SCI_BY_USING
+
 
 PERVERSE		self-indulgent
 PERVERSE		reprobate
@@ -5344,6 +5361,7 @@ $\hspace{-1.5mm}$
 SCI_INTRO_FILLER.}. 
 }
 
+
 SCI_MAY might
 SCI_MAY may
 SCI_MAY can
@@ -5467,6 +5485,7 @@ FILLER_SURPRISE_2	LIT_OFTEN conflicts with the need to provide SCI_THING to SCI_
 
 FILLER_SENTENCE LAME_OBSERVATION
 
+LAME_OBSERVATION No head injury is too trivial to be ignored
 LAME_OBSERVATION After all, `Rome wasn't built in a day'
 LAME_OBSERVATION+5 It CLEARLY remains to be SCI_VERBED whether OBS_END
 LAME_OBSERVATION+5 SCI_B_LEADIN_C TAKE_NOTE_THAT if OBS_END, it SCI_MAY cause SCI_ADJ_ADV BAD EXP_ADJ FINDINGs
@@ -5499,7 +5518,6 @@ SCI_ACH	SCI_VERBED SCI_THING_MOD
 SCI_ACH	SCI_VERBED SCI_THING_MOD (which SCI_EFFECT)
 SCI_ACH_PRES	SCI_VERBING SCI_THING_MOD
 SCI_ACH_PRES	SCI_VERBING SCI_THING_MOD (which SCI_EFFECT)
-
 
 YESORNO yes
 YESORNO no
@@ -5716,6 +5734,7 @@ LOWLY_PEOPLE+20	professors
 LOWLY_PEOPLE+10	honorary professors
 LOWLY_PEOPLE	our accountants
 LOWLY_PEOPLE	pro-tennis players
+LOWLY_PEOPLE	fuddy duddies
 LOWLY_PEOPLE	sexy people
 LOWLY_PEOPLE	fat people
 LOWLY_PEOPLE	business tycoons
@@ -6205,7 +6224,7 @@ EVAL_MEASUREMENT_UM throughput
 EVAL_MEASUREMENT_UM speed
 EVAL_MEASUREMENT_UM+8 EXP_ADJ potential
 EVAL_MEASUREMENT_UM latency
-EVAL_MEASUREMENT_UM+3 SCI_GENERIC_NOUNX
+EVAL_MEASUREMENT_UM+3 SCI_GENERIC_NOUNX 
 EVAL_MEASUREMENT_UM+3 OVERVERBING RATE
 EVAL_MEASUREMENT_UM+8 EXP_ADJ RATE  
 EVAL_MEASUREMENT_UM work MNOUN
@@ -6480,6 +6499,8 @@ LATEX_AUTHORS
 PIEFANCYHEAD
 
 }
+
+
 
 LATEX_CITEPACK \usepackage{cite}
 #LATEX_CITEPACK+3 
@@ -6860,6 +6881,7 @@ PERUNIT in
 MONEH DOLL$NONZMULTIDIG$ PERUNIT COSTITEMS
 MONEH DOLL$NONZDIGITMULTIDIG$ PERUNIT COSTITEMS
 MONEH DOLL$NONZ\commaDIGITDIGITDIGIT$ PERUNIT COSTITEMS
+
 
 
 #6 SECTORS
@@ -7346,7 +7368,7 @@ TOWN STNAMEhausen
 TOWN STNAMEau
 TOWN STNAME Rock
 
-TOWNAD+1 , GOOD_NOUN
+TOWNAD+100 , GOOD_NOUN
 TOWNAD , UPDOWN DIRN-side
 TOWNAD+10
 
@@ -7508,10 +7530,12 @@ COU Zimbabwe
 ZIP , UPRVARUPRVAR DIGITDIGITDIGITDIGITDIGIT
 ZIP 
 
+
 CAMPUS \,Campus
 CAMPUS 
 
 ADDR NONZDIGIT STNAME STREET, METADIRN TOWNTOWNADCAMPUSZIP, COU
+
 
 PUBLISHER Springer
 PUBLISHER Birkh\"auser
@@ -8165,7 +8189,7 @@ SDISCUSS in CITATION, the authors address the PROPNOUN of OBJECTS under the addi
 SDISCUSS+15 the goal of the present WORK is to METAVERB OBJECTS XXX
 DISCUSS it is not yet known whether ASSERTION, LIT_ALTHOUGH CITATION does address the issue of MATHADJ PROPNOUN XXX
 SDISCUSS in CITATION, the SCI_MAIN result was the METANOUN of OBJECTS XXX
-DISCUSS+15 in this setting, the ability to METAVERB OBJECTS is SCI_IMPORTANTV, LIT_ALTHOUGH GENERAL OPINION states that this SCI_PROBLEM is LIT_OFTEN SCI_PROBLEM_SOLVED by SCI_ADJ SCI_USE of MNOUNS XXX
+DISCUSS+15 in this setting, the ability to METAVERB OBJECTS is SCI_IMPORTANTV; LIT_ALTHOUGH GENERAL OPINION states that this SCI_PROBLEM is LIT_OFTEN SCI_PROBLEM_SOLVED by SCI_ADJ SCI_USE of MNOUNS XXX
 SDISCUSS+15 recent interest in OBJECTS has centered on METAVERBING OBJECTS XXX
 SDISCUSS+15 a central problem in AREA is the METANOUN of OBJECTS XXX
 SDISCUSS in CITATION, the authors METAVERBED OBJECTS XXX
@@ -8454,7 +8478,7 @@ PREFIXX multi
 PREFIXX bio
 PREFIXX poly
 PREFIXX tetra
-PREFIXX omni
+PREFIXX	omni
 PREFIXX	auto
 PREFIXX neo
 PREFIXX meta
@@ -9195,3 +9219,4 @@ AREANOUN probability
 AREANOUN representation theory
 AREANOUN set theory
 AREANOUN topology
+
