--- a/corprules.in
+++ b/corprules.in
@@ -582,9 +582,12 @@ CI_INTRO_GENERIC_MID LIT_LEADIN we METAVERB BIGTHEOREM, that SCI_FIELD follows t
 SCI_INTRO_GENERIC_MID LIT_LEADIN for example, SCI_ANUMBER SCI_SYSTEM_PL SCI_SYS_VERB SCI_GENERIC_NOUN in order to SCI_GOAL_ACHIEVE ADJECTIVE CONSTRAINT_TYPE
 SCI_INTRO_GENERIC_MID LIT_REVERSAL, this SCI_APPROACH is LIT_OFTEN SCI_REACTION REACTBYWHO
 SCI_INTRO_GENERIC_MID LIT_LEADIN SCI_SYSTEM_PL boils down to two SCI_MAIN premises: that SCI_OVERALL_THESIS_PROVE, and that SCI_OVERALL_THESIS_PROVE
-SCI_INTRO_GENERIC_MID LIT_ALTHOUGH SCI_THING_P SCI_EFFECT (LAME_OBSERVATION), OBS_END
+SCI_INTRO_GENERIC_MID LIT_ALTHOUGH SCI_THING_P SCI_EFFECT, OBS_END. MAYBELAME
 SCI_INTRO_GENERIC_MID BTEXT
 SCI_INTRO_GENERIC_MID as BAD as it sounds, only LOWLY_PEOPLE would be so PERVERSE as to SCI_IMAGINE that SCI_OVERALL_THESIS_PROVE
+
+MAYBELAME+2
+MAYBELAME LAME_OBSERVATION
 
 REACTBYWHO+3 in the field of SCI_FIELD
 REACTBYWHO by SCI_PEOPLE
@@ -2193,6 +2196,9 @@ CONSTRAINT_TYPEX		complexity
 CONSTRAINT_TYPEX		generality
 CONSTRAINT_TYPEX		simplicity
 CONSTRAINT_TYPEX		efficiency
+CONSTRAINT_TYPEX		 incorporativity
+CONSTRAINT_TYPEX		 objectivity
+CONSTRAINT_TYPEX		  manageability
 
 CONSTRAINT_TYPE		PREFIX-CONSTRAINT_TYPEX
 CONSTRAINT_TYPE+3		CONSTRAINT_TYPEX
@@ -3584,11 +3590,6 @@ SCI_BUZZWORD_NOUN+30 archetypes
 SCI_BUZZWORD_NOUN+30 paradigms
 SCI_BUZZWORD_NOUN+30 hyperspaces
 SCI_BUZZWORD_NOUN+30 exemplifications
-SCI_BUZZWORD_NOUN+30 incorporativity
-SCI_BUZZWORD_NOUN+30 objectivity
-SCI_BUZZWORD_NOUN+30 manageability
-SCI_BUZZWORD_NOUN+30 administration
-SCI_BUZZWORD_NOUN+50 CONSTRAINT_TYPEX
 SCI_BUZZWORD_NOUN+30 configurations
 SCI_BUZZWORD_NOUN+30 symmetries
 SCI_BUZZWORD_NOUN+30 approaches
@@ -5481,7 +5482,7 @@ FILLER_SENTENCE+15		SCI_B_LEADIN_C TAKE_NOTE_THAT our SCI_GOAL here is to set th
 FILLER_SENTENCE+15		This is an SCI_IMPORTANTV point to UNDERSTAND
 FILLER_SENTENCE		This point is, SOSEEM, deceptively truthful 
 FILLER_SENTENCE		This point is, SOSEEM, \emph{deceptively truthful} 
-FILLER_SENTENCE			This represents a SCI_ADJ point (see CITATION)
+FILLER_SENTENCE			This represents a SCI_ADJ point (see CITATION_DEF)
 FILLER_SENTENCE+15		This is INSTRUMENTAL to the SUCCESS of our RECENT work
 FILLER_SENTENCE+15		We LIT_OMIT WHAT_PL OMIT_WHY
 FILLER_SENTENCE+15		Of course, this is not always POSCASE
@@ -5523,10 +5524,10 @@ LAME_OBSERVATION By adopting a POSSIBLE_NV SCI_APPROACH, SCI_ADJ_ADV LIT_GOOD PO
 
 OBS_END EXP_ADJ CONSTRAINT_TYPE is as AMBITIOUS as PEOPLE_SAY
 OBS_END the EXP_ADJ SCI_APPROACH we propose here represents a POSSIBLE_NV SOFTWARE_ADJ EVALUATION
-OBS_END REAADJ MNOUNS are PROPPHRASE
+OBS_END AREAADJ MNOUNS are PROPPHRASE
 OBS_END RELATED solutions to this SCI_PROBLEM are LIT_GOOD
-OBS_END a similar SCI_MODEL_TYPE CITATION SCI_CAN EVAL_WHY_VERB MATHNOUNS 
-OBS_END SCI_PROVE_VERBING that SCI_OVERALL_THESIS_PROVE represents the CRUX 
+OBS_END a similar SCI_MODEL_TYPE CITATION SCI_CAN EVAL_WHY_VERB MATHNOUNS
+OBS_END SCI_PROVE_VERBING that SCI_OVERALL_THESIS_PROVE represents the CRUX
 
 OMIT_WHY due to space constraints
 OMIT_WHY due to resource constraints
