--- a/corprules.in
+++ b/corprules.in
@@ -582,11 +582,11 @@ CI_INTRO_GENERIC_MID LIT_LEADIN we METAVERB BIGTHEOREM, that SCI_FIELD follows t
 SCI_INTRO_GENERIC_MID LIT_LEADIN for example, SCI_ANUMBER SCI_SYSTEM_PL SCI_SYS_VERB SCI_GENERIC_NOUN in order to SCI_GOAL_ACHIEVE ADJECTIVE CONSTRAINT_TYPE
 SCI_INTRO_GENERIC_MID LIT_REVERSAL, this SCI_APPROACH is LIT_OFTEN SCI_REACTION REACTBYWHO
 SCI_INTRO_GENERIC_MID LIT_LEADIN SCI_SYSTEM_PL boils down to two SCI_MAIN premises: that SCI_OVERALL_THESIS_PROVE, and that SCI_OVERALL_THESIS_PROVE
-SCI_INTRO_GENERIC_MID LIT_ALTHOUGH SCI_THING_P SCI_EFFECT, OBS_END MAYBELAME
+SCI_INTRO_GENERIC_MID LIT_ALTHOUGH SCI_THING_P SCI_EFFECT, OBS_ENDMAYBELAME
 SCI_INTRO_GENERIC_MID BTEXT
 SCI_INTRO_GENERIC_MID as BAD as it sounds, only LOWLY_PEOPLE would be so PERVERSE as to SCI_IMAGINE that SCI_OVERALL_THESIS_PROVE
 
-MAYBELAME+2
+MAYBELAME+2 
 MAYBELAME . LAME_OBSERVATION
 
 REACTBYWHO+3 in the field of SCI_FIELD
@@ -1180,7 +1180,6 @@ IMPL_COMPONENT corporate database
 IMPL_COMPONENT optimised innovation
 IMPL_COMPONENT business machine monitor
 IMPL_COMPONENT operating method
-IMPL_COMPONENT SCI_THING
 IMPL_COMPONENT specific action item
 
 
@@ -2581,9 +2580,9 @@ EXP_TREK		PREFIXXverse
 EXP_ADJ+10		GOOD_ADJ
 EXP_ADJ+30		SCI_BUZZWORD_ADJ
 EXP_ADJ+30		SOFTWARE_ADJ
-EXP_ADJ+30		real-time
 EXP_ADJ+30		portable
 EXP_ADJ+5		edible
+EXP_ADJ+30		real-time
 EXP_ADJ+30		ultrafast
 EXP_ADJ+30		quantised
 EXP_ADJ+30		electromagnetic
@@ -2619,7 +2618,7 @@ EXP_ADJ+30		active
 #EXP_ADJ+30		MATHADJ	
 EXP_ADJ+35		SCI_STATUS_ADJ
 #EXP_ADJ+30		AREAMOD
-EXP_ADJ+70		EXP_TREK
+EXP_ADJ+70		EXP_TREK		
 EXP_ADJ+10		hyperspectral
 EXP_ADJ+20 		remote
 EXP_ADJ+20 		interpretative
@@ -2642,7 +2641,8 @@ EXP_ADJ+20		matriculated
 EXP_ADJ+20		articulated
 EXP_ADJ+20		subatomic
 EXP_ADJ+20		mechanised
-EXP_ADJ+30	 	COMP_ADJ		
+EXP_ADJ+30	 	COMP_ADJ
+
 
 EXP_TYPE	EXP_ADJ EXP_TYPE_UM
 EXP_TYPE	EXP_TYPE_UM
@@ -6454,7 +6454,6 @@ SCI_ACT}
 \newcommand{\titcap}{}
 
 \usepackage{etex}
-\usepackage{epsfig}
 \usepackage[latin1]{inputenc}
 \usepackage{cite}
 \usepackage{amsfonts}
@@ -6574,14 +6573,14 @@ LATEX_AUTHORS \author{SCIAUTHORS}
 LATEX_FIGURE {
 
 \begin{figure}[thp]
-\centerline{\epsfig{figure=LATEX_FIG_FILENAME,width=3in}}
+\centerline{\includegraphics[width=3in]{LATEX_FIG_FILENAME}}
 \caption{\small{SCI_GRAPH_CAPTION}}
 \label{LATEX_FIG_LABEL}
 \end{figure}
 
 }
 
-LATEX_FIG_FILENAME figureNEWFIGNUM+.eps
+LATEX_FIG_FILENAME myfigureNEWFIGNUM+.pdf
 NEWFIGNUM\+
 NEWFIGNUM\#
 
@@ -6593,7 +6592,7 @@ NEWFIGLABEL\#
 LATEX_DIAGRAM {
 
 \begin{figure}[thp]
-\centerline{\epsfig{figure=LATEX_DIA_FILENAME}}
+\centerline{\includegraphics{LATEX_DIA_FILENAME}}
 \caption{\small{
 SCI_DIAGRAM_CAPTION
 }}
@@ -6602,7 +6601,7 @@ SCI_DIAGRAM_CAPTION
 
 }
 
-LATEX_DIA_FILENAME diagNEWDIANUM+.eps
+LATEX_DIA_FILENAME diagNEWDIANUM+.pdf
 NEWDIANUM\+
 NEWDIANUM\#
 
@@ -8476,6 +8475,7 @@ ADVERB trivially
 ADVERB unconditionally
 ADVERB universally
 
+
 PREFIXX	edu
 PREFIXX orga
 PREFIXX semi
@@ -8569,6 +8569,11 @@ PREFIXX ambi
 
 PREFIX+40 PREFIXX
 PREFIX \"{u}ber
+
+
+
+
+
 
 COMPPRE_+4 PREFIXX
 COMPPRE_ EMID1
