--- a/corprules.in
+++ b/corprules.in
@@ -2868,6 +2868,8 @@ WARE		bio-sensors
 WARE		bio-physics
 WARE+10		nanotechnology
 
+THE_WILD	corporate COU
+THE_WILD	the workplace
 THE_WILD	the wild
 THE_WILD	vivo
 THE_WILD	the human body
