--- a/corprules.in
+++ b/corprules.in
@@ -5693,7 +5693,7 @@ SCI_A_FACT	the SCI_COMPLEXNOUN of SCI_FIELD
 SCI_A_FACT	the work of SCI_COUNTRY SCI_PERSON SCI_SOURCE
 SCI_ACT+30	SCI_ACT_A SCI_THING_P 
 SCI_ACT		SCI_ACT_A SCI_THING_P that SCI_EFFECT
-SCI_ACT_A	the understanding of SCI_THING_MOD with respect to 
+SCI_ACT_A	the understanding of SCI_THING_P with respect to 
 SCI_ACT_A	SCI_ADJ SCI_VERBION of SCI_THING and
 SCI_ACT_A+15	SCI_VERBION of 
 SCI_ACT_A+15	SCI_USE of 
